--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.30.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
