--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
