--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@clerk/themes": "^2.1.20",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -20,11 +20,11 @@
     "lucide-react": "^0.428.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "query-string": "^9.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "svix": "^1.30.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -38,7 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
